--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BoltPass - Secure Password Management</title>
-    <link rel="icon" type="image/svg+xml" href="/lovable-uploads/white_logo.svg" />
-    <meta name="description" content="Secure password management tool for generating and storing credentials locally" />
-    <meta name="author" content="BoltPass" />
+    <title>bold-passkey</title>
+    <meta name="description" content="Lovable Generated Project" />
+    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="BoltPass - Secure Password Management" />
-    <meta property="og:description" content="Secure password management tool for generating and storing credentials locally" />
+    <meta property="og:title" content="Lovable Generated Project" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
