--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bold-passkey</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>BoltPass</title>
+    <link rel="icon" type="image/svg+xml" href="/lovable-uploads/white_logo.svg" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/white_logo.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="description" content="Secure password management tool for generating and storing credentials locally" />
+    <meta name="author" content="BoltPass" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="BoltPass - Secure Password Management" />
+    <meta property="og:description" content="Secure password management tool for generating and storing credentials locally" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/lovable-uploads/white_logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="BoltPass" />
+    <meta name="twitter:description" content="Secure password management tool" />
+    <meta name="twitter:image" content="/lovable-uploads/white_logo.svg" />
+    
+    <meta name="theme-color" content="#000000" />
   </head>
 
   <body>
