Fix logo on homepage and update favicon references

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BoltPass</title>
-    <link rel="icon" type="image/svg+xml" href="/lovable-uploads/white_logo.svg" />
-    <link rel="apple-touch-icon" href="/lovable-uploads/white_logo.svg" />
+    <link rel="icon" href="/lovable-uploads/favicon.ico" />
+    <link rel="apple-touch-icon" href="/lovable-uploads/favicon.ico" />
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="description" content="Secure password management tool for generating and storing credentials locally" />
     <meta name="author" content="BoltPass" />
